--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@
 PORT=3100
 
 #CONFIGURACION DE MONGODB
-URL_MONGO=mongodb://quetzal.digital:27017/sopes1_proyecto2
+URL_MONGO=mongodb://45.79.223.10:27017/plataformaDB
 USER_MONGO=""
 PASSWORD_MONGO=""
